--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi            # Framework principal para la API
-uvicorn[standard]  # Servidor ASGI para correr FastAPI
-requests           # Para comunicarte con APIs externas (ej. LLM)
-pydantic           # Para validar la estructura de salida del agente
-python-dotenv      # Para manejar variables de entorno (ej. API keys)
-loguru             # Para logging claro y estructurado
-pytest             # Para pruebas unitarias
-beautifulsoup4     # Para parsear HTML en jurisprudencia.py
-typing-extensions  # Opcional, para anotaciones de tipos más avanzadas
+fastapi
+uvicorn[standard]
+requests
+pydantic
+python-dotenv
+loguru
+pytest
+beautifulsoup4
+typing-extensions
